<resources>
    <string name="app_name">煜艾堂</string>
    <string name="facilityName">#%d</string>
    <string name="temperature">温度：%.1f℃</string>
    <string name="serialPortTest">串口调试</string>
    <string name="port_settings">串口配置</string>
    <string name="port_location">物理地址：</string>
    <string name="baud">波特率：</string>
    <string name="serialPortLog">通讯日志</string>
    <string name="send">发送</string>
    <string name="clear">清空</string>
    <string name="equipments">设备列表</string>
    <string name="equipment">终端 #%d</string>
    <string name="appointed">已预约</string>
    <string name="occupied">使用中</string>
    <string name="available">空闲中</string>
    <string name="call">呼叫</string>
    <string name="calling">呼叫中</string>
    <string name="on">开机</string>
    <string name="shutdown">关机</string>
    <string name="backstage">设备后台</string>
    <string name="manual">手动调试</string>
    <string name="exit">退出后台</string>
    <string name="restore">恢复出厂设置</string>
    <string name="reboot">重启设备</string>
    <string name="upgrade">检测软件升级</string>
    <string name="upload">手动上传日志</string>
    <string name="equip_setting">自助终端配置</string>
    <string name="equip_type">设备类型</string>
    <string name="equip_status">设备状态</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="quit">放弃</string>
    <string name="resources">资源管理</string>
    <string name="resources_list">资源列表（共%d个）</string>
    <string name="addResource">添加资源（※在资源管理器中长按多选）</string>
    <string name="filename">文件名：%s</string>
    <string name="path">文件路径：%s</string>
    <string name="upward">上移</string>
    <string name="downward">下移</string>
    <string name="wechat_name">微信名</string>
    <string name="body_temp">体温  %.1f℃ [%s]</string>
    <string name="heart_rate">心率  %d次/分 [%s]</string>
    <string name="qrcode_scan">恭喜你检测完成！\n请扫码进行VIP登录</string>
    <string name="attr_name">%s体质</string>
    <string name="physical">体型特征：%s</string>
    <string name="mental">精神特征：%s</string>
    <string name="illness">易患疾病：%s</string>
    <string name="scan2getReport">检测结果已成功！\n请扫码领取报告和调理方案</string>
    <string name="test_time">检测时间：%s</string>
    <string name="test_id">报告编号：%s</string>
    <string name="openPort">开启串口</string>
    <string name="relay">继电器</string>
    <string name="clearPool">清空指令池</string>
    <string name="next">下一页</string>
    <string name="upgradeHint">是否更新到最新版本？\n%s To %s</string>
    <string name="all_restore">一键复位</string>
</resources>