<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="600dp" android:layout_height="800dp"
              android:paddingTop="50dp" android:paddingBottom="50dp">
    <GridLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:rowCount="3" android:columnCount="2">
        <TextView android:layout_width="400dp" android:layout_height="100dp"
                  android:textSize="@dimen/macroFontSize" android:textColor="@color/white"
                  android:id="@+id/type" android:layout_column="0" android:layout_row="0"
                  android:background="@drawable/ink_background" android:paddingTop="15dp"
                  android:paddingStart="25dp" android:paddingEnd="0dp"/>
        <TextView android:layout_width="400dp" android:layout_height="100dp"
                  android:textSize="@dimen/hugeFontSize" android:textColor="@color/red"
                  android:paddingStart="25dp" android:paddingEnd="0dp"
                  android:id="@+id/critic" android:layout_column="0" android:layout_row="1"/>
        <ImageView android:layout_width="200dp" android:layout_height="200dp"
                   android:scaleType="centerInside" android:id="@+id/icon"
                   android:layout_column="1" android:layout_row="0" android:layout_rowSpan="2"/>
        <LinearLayout android:layout_width="400dp" android:layout_height="200dp"
                      android:layout_row="2" android:layout_column="0" android:layout_columnSpan="2"
                      android:orientation="vertical" android:paddingStart="25dp" android:paddingEnd="0dp">
            <TextView android:layout_width="wrap_content" android:layout_height="60dp"
                      android:textSize="@dimen/regularFontSize" android:textColor="@color/black"
                      android:gravity="center_vertical"
                      android:id="@+id/physical" android:text="@string/physical" android:layout_marginBottom="10dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="60dp"
                      android:textSize="@dimen/regularFontSize" android:textColor="@color/black"
                      android:gravity="center_vertical"
                      android:id="@+id/mental" android:text="@string/mental" android:layout_marginBottom="10dp"/>
            <TextView android:layout_width="wrap_content" android:layout_height="60dp"
                      android:textSize="@dimen/regularFontSize" android:textColor="@color/black"
                      android:gravity="center_vertical"
                      android:id="@+id/illness" android:text="@string/illness"/>
        </LinearLayout>
    </GridLayout>
    <GridLayout android:layout_width="550dp" android:layout_height="250dp" android:layout_marginTop="50dp"
                android:background="@drawable/border" android:paddingTop="25dp" android:paddingBottom="25dp"
                android:paddingStart="10dp" android:paddingEnd="10dp"
                android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
                android:columnCount="2" android:rowCount="2">
        <ImageView android:layout_width="200dp" android:layout_height="200dp" android:src="@drawable/qrcode"
                   android:scaleType="fitXY" android:id="@+id/qrcode" android:layout_column="0" android:layout_row="0"
                   android:layout_rowSpan="2" android:background="@drawable/border"
                   android:layout_marginEnd="30dp"/>
        <TextView android:layout_width="300dp" android:layout_height="wrap_content"
                  android:textSize="@dimen/regularFontSize" android:gravity="center"
                  android:text="@string/scan2getReport" android:layout_marginTop="10dp"
                  android:textColor="@color/colorPrimary" android:layout_marginBottom="50dp"
                  android:layout_column="1" android:layout_row="0"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="@dimen/minorFontSize" android:text="@string/test_time"
                  android:textColor="@color/darkGray" android:id="@+id/testTime"
                  android:layout_column="1" android:layout_row="1"
                  android:layout_marginBottom="50dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="@dimen/minorFontSize" android:text="@string/test_id"
                  android:textColor="@color/darkGray" android:id="@+id/testId" android:layout_column="1"
                  android:layout_row="1" android:layout_marginTop="50dp"/>
    </GridLayout>
</LinearLayout>