<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent" android:layout_height="match_parent"
              tools:ignore="PxUsage">
    <FrameLayout android:layout_width="match_parent" android:layout_height="135px"
                 android:background="@color/colorPrimary" android:layout_marginBottom="40dp" >
        <ImageView android:layout_width="40dp" android:layout_height="40dp"
                   android:src="@drawable/back" android:layout_gravity="start|center_vertical"
                   android:layout_marginStart="60dp" android:id="@+id/back"/>
        <TextView android:layout_width="match_parent" android:layout_height="match_parent"
                  android:text="@string/equip_setting" android:layout_gravity="center"
                  android:gravity="center" android:textColor="@color/white" android:textSize="@dimen/macroFontSize"/>
    </FrameLayout>
    <GridLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                android:rowCount="1" android:columnCount="2">
        <!--  Left half  -->
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical" android:layout_column="0"
                      android:layout_row="0" android:paddingStart="50dp" android:paddingEnd="100dp">
            <TextView android:layout_width="750dp" android:layout_height="75dp"
                      android:textSize="@dimen/hugeFontSize" android:textColor="@color/colorPrimary"
                      android:text="@string/resources_list" android:layout_marginBottom="20dp"
                      android:paddingStart="20dp" android:paddingEnd="0dp"
                      android:background="@drawable/bottom_border"
                      android:gravity="center_vertical|start" android:id="@+id/resourceListText"/>
            <ScrollView android:layout_width="wrap_content" android:layout_height="600dp"
                        android:scrollbars="none" android:background="@drawable/bottom_border">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="vertical" android:id="@+id/resourceList"/>
            </ScrollView>
            <TextView android:layout_width="750dp" android:layout_height="75dp"
                      android:textSize="@dimen/bigFontSize" android:text="@string/addResource"
                      android:background="@drawable/border" android:paddingStart="20dp"
                      android:paddingEnd="0dp" android:layout_marginTop="20dp"
                      android:textColor="@color/colorPrimary" android:gravity="center" android:id="@+id/addResource"/>
        </LinearLayout>

        <!--  Right Half  -->
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="vertical" android:layout_column="1" android:layout_row="0"
                      android:background="@drawable/left_border" android:paddingStart="50dp"
                      android:paddingEnd="0dp">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <VideoView android:id="@+id/videoView" android:layout_width="810dp"
                           android:layout_height="540dp" android:background="@drawable/none_radius_border"/>
            </RelativeLayout>
            <ImageView android:layout_width="810dp" android:layout_height="540dp"
                       android:scaleType="center" android:id="@+id/imageView"
                       android:visibility="gone" android:background="@drawable/none_radius_border"/>
            <LinearLayout android:layout_width="810dp" android:layout_height="wrap_content"
                          android:layout_marginTop="100dp" android:background="@drawable/border"
                          android:orientation="vertical" android:padding="50dp">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="horizontal">
                    <TextView android:layout_width="300dp" android:layout_height="wrap_content"
                              android:text="@string/filename" android:id="@+id/filename"
                              android:textSize="@dimen/bigFontSize" android:textColor="@color/colorPrimary"
                              android:maxWidth="250dp" android:maxLines="1" android:ellipsize="end"/>
                    <TextView android:layout_width="400dp" android:layout_height="wrap_content"
                              android:text="@string/path" android:id="@+id/path"
                              android:textSize="@dimen/bigFontSize" android:textColor="@color/colorPrimary"
                              android:layout_marginEnd="0dp" android:maxLines="1"
                              android:maxWidth="380dp" android:ellipsize="end"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:orientation="horizontal" android:layout_marginTop="50dp">
                    <TextView android:layout_width="150dp" android:layout_height="50dp"
                              android:text="@string/upward" android:id="@+id/upward"
                              android:textSize="@dimen/bigFontSize" android:textColor="@color/colorPrimary"
                              android:background="@drawable/border" android:gravity="center"/>
                    <TextView android:layout_width="150dp" android:layout_height="50dp"
                              android:text="@string/downward" android:id="@+id/downward"
                              android:textSize="@dimen/bigFontSize" android:textColor="@color/colorPrimary"
                              android:layout_marginStart="50dp" android:background="@drawable/border"
                              android:gravity="center"/>
                    <TextView android:layout_width="200dp" android:layout_height="50dp"
                              android:text="@string/delete" android:id="@+id/delete"
                              android:textSize="@dimen/bigFontSize" android:textColor="@color/crimson"
                              android:layout_marginStart="150dp" android:background="@drawable/crimson_border"
                              android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </GridLayout>
</LinearLayout>